Login Page Validation

--- a/login/forgotpassword.css
+++ b/login/forgotpassword.css
@@ -42,7 +42,9 @@ body {
   margin-bottom: 0;
 }
 
-#input {
+#inputEmail,
+#inputNewPassword,
+#inputConfirmPassword {
   height: 40px;
   font-size: 15px;
   border-width: 1px;
@@ -78,6 +80,7 @@ body {
   background-color: green;
   color: white;
   height: 50px;
+  margin-top: 20px;
   border-radius: 50px;
   border-width: 1px;
   border-style: none;
